--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 /*
- * Colour palette: https://www.hsluv.org/
- * Font sizing: https://seek-oss.github.io/capsize/
  * Base64 embed fonts: https://amio.github.io/embedded-google-fonts/
- * SVG animation: https://shapeshifter.design/
  * Icons: https://fonts.google.com/icons?icon.style=Sharp
+ * Font sizing: https://seek-oss.github.io/capsize/
+ * SVG animation: https://shapeshifter.design/
+ * Colour palette: https://www.hsluv.org/
  * Brand icons: https://simpleicons.org/
  */
 
@@ -1323,11 +1323,13 @@ body {
 
 /* Modal - Archive */
 
-#modal_archive [data-carousel] {
+[data-carousel] {
+    display: flex;
+    flex-direction: column;
     --slide-offset: 2.5rem;
 }
 
-/* #modal_archive [data-carousel]::before {
+/* [data-carousel]::before {
     content: "";
     position: absolute;
     top: 0;
@@ -1340,20 +1342,45 @@ body {
     pointer-events: none;
 } */
 
-#modal_archive [data-carousel-slides] {
+[data-carousel-slides] {
     position: relative;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     scrollbar-width: none;
     column-gap: var(--slide-offset);
+    border-radius: 0.5rem;
     /* mask-image: linear-gradient(90deg, rgba(0, 0, 0, 1) calc(100% - calc(var(--slide-offset) * 2)), rgba(0, 0, 0, 0) 100%); */
 }
 
-#modal_archive [data-carousel-slides]::-webkit-scrollbar {
+[data-carousel-slides]::-webkit-scrollbar {
     display: none;
 }
 
-#modal_archive [data-carousel-slides] figure {
+[data-carousel-open-all] {
+    display: inline-flex;
+    align-self: flex-end;
+    align-items: center;
+    justify-content: center;
+    column-gap: 0.375rem;
+    border-radius: 0.375rem;
+    background-color: var(--modal-tag-bg);
+    padding: 0.4375rem 0.625rem 0.375rem 0.625rem;
+    margin-bottom: var(--segment-third);
+    color: var(--text-1);
+    cursor: pointer;
+}
+
+[data-carousel-open-all]::after {
+    content: "";
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGhlaWdodD0iMjBweCIgdmlld0JveD0iMCAtOTYwIDk2MCA5NjAiIHdpZHRoPSIyMHB4IiBmaWxsPSIjZThlYWVkIj48cGF0aCBkPSJNOTYtOTZ2LTQ4MGgxNDR2LTI4OGg2MjR2NDgwSDcyMHYyODhIOTZabTcyLTcyaDQ4MHYtMjY0SDE2OHYyNjRabTU1Mi0yODhoNzJ2LTI2NEgzMTJ2MTQ0aDQwOHYxMjBaIi8+PC9zdmc+");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+[data-carousel-slides] figure {
     display: block;
     width: 100%;
     justify-content: center;
@@ -1361,37 +1388,55 @@ body {
     scroll-snap-align: start;
 }
 
-/* #modal_archive [data-carousel-slides] figure:last-child {
+/* [data-carousel-slides] figure:last-child {
     margin-right: var(--slide-offset);
 } */
 
-#modal_archive [data-carousel-slides] figure a {
+[data-carousel-slides] figure a {
     display: block;
     aspect-ratio: 4 / 3;
     overflow: hidden;
     border-radius: 0.5rem;
 }
 
-#modal_archive [data-carousel-slides] figure a img {
+[data-carousel-slides] figure a img {
     object-fit: cover;
     object-position: center;
     width: 100%;
     height: 100%;
 }
 
-#modal_archive [data-carousel-nav] {
-    column-gap: 0.5rem;
+[data-carousel-nav-wrapper] {
+    margin-top: var(--segment-third);
 }
 
-#modal_archive [data-carousel-nav] a {
-    width: 0.65rem;
-    height: 0.65rem;
+[data-carousel-nav] {
+    display: inline-flex;
+    align-self: flex-start;
+    column-gap: 0.625rem;
+    padding: 0.625rem 0.9375rem;
+    /* transform-origin: left; */
+    margin: 0.375rem 0;
+    border-radius: 0.5rem;
+    /* background-color: rgba(255, 255, 255, 0.25); */
+    background-color: var(--modal-tag-bg);
+}
+
+[data-carousel-nav] button {
+    width: 0.5rem;
+    height: 0.5rem;
     border-radius: 999rem;
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.35);
+    cursor: pointer;
 }
 
-#modal_archive [data-carousel-nav] a[aria-current] {
-    background-color: rgba(255, 255, 255, 0.5);
+[data-carousel-nav] button[aria-current] {
+    width: 1.75rem;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+[data-carousel-nav] button:last-child {
+    display: none;
 }
 
 
@@ -1539,6 +1584,8 @@ body {
     transition-property: opacity;
     transition-duration: 0.075s;
     transition-timing-function: var(--ease-in-quad);
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 .tooltip span {
@@ -1548,8 +1595,6 @@ body {
     letter-spacing: 0.0234375rem;
     font-size: 0.98214375rem;
     line-height: 0.6875rem;
-    user-select: none;
-    -webkit-user-select: none;
 }
 
 .tooltip span::before {
@@ -1564,7 +1609,7 @@ body {
     display: table;
 }
 
-.tooltip_wrapper:hover:not(.active) .tooltip:not(.tooltip-active), .tooltip_wrapper:focus-within:not(.active) :not(.tooltip-active),
+.tooltip_wrapper:hover:not(.active) .tooltip:not(.tooltip-active), .tooltip_wrapper:focus-within:not(.active) .tooltip:not(.tooltip-active),
 .tooltip_wrapper.active .tooltip.tooltip-active, .tooltip_wrapper:focus-within.active .tooltip.tooltip-active {
     opacity: 1;
     transition-duration: 0.15s;
