--- a/styles/reset.css
+++ b/styles/reset.css
@@ -50,6 +50,12 @@ img,
 picture {
     max-width: 100%;
     display: block;
+    user-select: none;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
 }
 
 input,
