--- a/styles/reset.css
+++ b/styles/reset.css
@@ -118,6 +118,8 @@ ul,
 ol {
     margin-block-start: 0;
     margin-block-end: 0;
+    padding-inline-start: 0;
+    padding-inline-end: 0;
 }
 
 dialog {
